[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 7",
    "numpy >= 2.0",
    "wheel",
]
# build-backend = "setuptools.build_meta"
# in-tree backend because of MPI requirement
build-backend = "backend"
backend-path = ["_custom_build"]

[project]
name = "accelerator-toolbox"
authors = [{ name = "The AT collaboration", email = "atcollab-general@lists.sourceforge.net" }]
description = "Accelerator Toolbox"
readme = "pyat/README.rst"
license = "Apache-2.0"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
]
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.23.5",
    "scipy >= 1.10.0"
]

[project.urls]
Home = "https://github.com/atcollab/at"
Github = "https://github.com/atcollab/at.git"
Issues = "https://github.com/atcollab/at/issues"
ChangeLog = "https://github.com/atcollab/at/releases"

[project.optional-dependencies]
mpi = ["mpi4py"]
plot = ["matplotlib"]
dev = ["pytest >= 2.9", "pytest-cov", "flake8"]
doc = ["Sphinx ~= 8.1", "myst-parser", "myst-nb", "pydata-sphinx-theme",
    "sphinx_design", "sphinx-copybutton"]

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
where = ["pyat"]
namespaces = false

[tool.setuptools.package-data]
machine_data = ["*.m", "*.mat"]

[tool.cibuildwheel]
build = ["*"]
# Remove free-threaded builds
skip = ["cp3{8,9}-*", "cp314t-*"]
archs = ["auto64"]
build-verbosity = "1"

#[tool.cibuildwheel.linux]
## Pass the detected PyAT version to the linux docker containers
#environment-pass = ["SETUPTOOLS_SCM_PRETEND_VERSION"]

[tool.setuptools_scm]
write_to = "pyat/at/_version.py"
git_describe_command = "git describe --dirty --tags --long --match pyat-[0-9]*"
fallback_version = "0.0.0"
