[metadata]
name = accelerator-toolbox
author = The AT collaboration
author_email = atcollab-general@lists.sourceforge.net
description = Accelerator Toolbox
long_description = file: README.rst
long_description_content_type = text/x-rst
# version ignore when running setuptools_scm
version = 0.0.0
url = https://github.com/atcollab/at
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.6.0
packages = find:
zip_safe = False
install_requires =
    importlib-metadata;python_version<'3.8'
    numpy>=1.16.6;python_version<'3.10'
    numpy>=1.21.5;python_version>='3.10'
    scipy>=0.16

[options.extras_require]
dev =
    pytest >= 2.9
    pytest-lazy-fixture
    pytest-cov
    flake8